<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bus_track_title_TextView_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bus_track_dialog_title_text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <EditText
            android:id="@+id/edtTextName_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/bus_name_hint_string"
            android:inputType="text"
            android:textAlignment="viewStart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <EditText
            android:id="@+id/edtTextBusNum_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bus_number_hint_string"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/cancelBtn_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_string" />

        <Button
            android:id="@+id/confirm_Btn_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/storage_string" />
    </LinearLayout>

</LinearLayout>
